# python_uv_package_template

./: README.md  pyproject.toml
tests/: test_hello.py
